# flash-algo

./: Cargo.toml  README.md  link.x  template.yaml
.cargo/: config.toml
src/: main.rs  romapi.rs
