[package]
authors = ["Andelf <andelf@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "flash-algo"
version = "0.1.0"

[dependencies]
flash-algorithm = { version = "0.4.0", default-features = false, features = [
    "erase-chip",
] }
panic-halt = "0.2.0"
hpm-metapac = { version = "0.0.3", features = [
    "hpm5361",
], path = "../hpm-data/build/hpm-metapac" }
# defmt = "0.3.8"
# defmt-rtt = "0.4.1"

[features]
xpi0 = []
xpi1 = []

# this lets you use `cargo fix`!
[[bin]]
name = "flash-algo"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
